--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@vercel/postgres": "^0.9.0",
+    "bcrypt": "^5.1.1",
     "hamburger-react": "^2.5.1",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
