--- a/package.json
+++ b/package.json
@@ -9,21 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.4.2",
+    "@auth/prisma-adapter": "^2.4.2",
     "@heroicons/react": "^2.1.5",
+    "@prisma/adapter-neon": "^5.18.0",
+    "@prisma/client": "^5.18.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@vercel/postgres": "^0.9.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "hamburger-react": "^2.5.1",
+    "jose": "^5.6.3",
+    "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
-    "react": "^18",
-    "react-dom": "^18",
+    "pg": "^8.12.0",
+    "prisma": "^5.12.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.51.3",
     "react-spinners": "^0.14.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1"
   }
 }
