--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@auth/pg-adapter": "^1.4.2",
     "@auth/prisma-adapter": "^2.4.2",
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -29,7 +32,7 @@
     "prisma": "^5.12.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.52.2",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
