--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.0",
     "hamburger-react": "^2.5.1",
     "jose": "^5.6.3",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.12.0",
-    "prisma": "^5.12.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
@@ -39,9 +39,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "@faker-js/faker": "^8.4.1",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1"
   }
