--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@sendgrid/mail": "^8.1.3",
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
