--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -29,6 +30,7 @@
     "hamburger-react": "^2.5.1",
     "jose": "^5.6.3",
     "lucide-react": "^0.428.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.12.0",
