--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
     "firebase": "^10.13.0",
     "hamburger-react": "^2.5.1",
     "jose": "^5.6.3",
