--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "firebase": "^10.13.0",
     "hamburger-react": "^2.5.1",
     "jose": "^5.6.3",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.428.0",
     "nanoid": "^5.0.7",
     "next": "14.2.5",
@@ -44,6 +47,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
