--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.12.0",
     "react": "18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
