--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -48,6 +49,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
