--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "firebase": "^10.13.0",
     "hamburger-react": "^2.5.1",
@@ -43,9 +44,11 @@
     "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
     "react": "18.3.1",
     "react-datepicker": "^7.4.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
