--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
@@ -28,6 +29,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@sendgrid/mail": "^8.1.3",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -42,14 +44,14 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.428.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.5",
+    "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.20",
     "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
