--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
